# ruptures

./: ..coverage.~4a7a2016  .coverage  .coverage_conflict-20151112-152034  .flake8  .github:workflows:build-wheels.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  mkdocs_macros.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.binder/: apt.txt  requirements.txt
.circleci/: check-linting.yml  config.yml
.github/: labeler.yml  release-drafter.yml  semantic.yml
.github/workflows/: benchmarks.yml  build-wheels.yml  check-docs.yml  check-linting.yml  lint-pr.yml  pr-labeler.yml  publish-doc-to-remote-repo.yml  publish-doc-to-remote.yml  publish-doc.yml  publish-package-to-pypi.yml  publish-to-pypi-tmp.yml  publish-to-pypi.yml  publish_package_and_docs.yml  python-package.yml  release-drafter.yml  run-test-coverage.yml  run-test.yml  test-and-lint.yml  upload-to-pypi.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: README_CI.md  __init__.py  ruptures.py
docs/: Makefile  README.md  contributing.md  custom-cost-function.md  fit-and-predict.md  index.md  install.md  license.md  make.bat  requirements.txt  what-is-cpd.md
docs/code-reference/: base-reference.md  index.md
docs/code-reference/costs/: costautoregressive-reference.md  costclinear-reference.md  costcosine-reference.md  costl1-reference.md  costl2-reference.md  costlinear-reference.md  costml-reference.md  costnormal-reference.md  costrank-reference.md  costrbf-reference.md
docs/code-reference/datasets/: datasets-reference.md  (+4 more)
docs/data/: 0.ref  text-segmentation-data.txt
docs/examples/: advanced-usages-introduction.md  ensemble-dimensions.ipynb  ensemble-window.ipynb  graph-signal-cpd.ipynb  introduction.md  kernel-cpd-performance-comparison.ipynb  merging-cost-functions.ipynb  music-segmentation.ipynb  simple-usages-introduction.md  text-sandbox.ipynb  text-segmentation-adjacent.ipynb  text-segmentation-emb.ipynb  text-segmentation.ipynb
docs/getting-started/: basic-usage.ipynb
docs/javascripts/: configs.js  mathjax.js
docs/source/: biblio.bib  conf.py  cpd.rst  general-info.rst  index.rst  introduction.rst
docs/user-guide/: cost-functions.md  evaluation.md  generate-signals.md  index.md  search-methods.md
notebooks/: basic-usage.ipynb  dynamic-programming.ipynb  kernel-cpd-performance-comparison.ipynb  quick-start.ipynb  simple-example.ipynb
ruptures/: __init__.py  base.py  exceptions.py
ruptures.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ruptures/costs/: __init__.py  combinatorialCost.py  combinatorial_cost.py  costautoregressive.py  costclinear.py  costcosine.py  costl1.py  costl2.py  costlinear.py  costml.py  costnormal.py  costqresiduals.py  costrank.py  costrbf.py  costs.py  costt2.py  costtsquared.py  exceptions.py  factory.py  gaussian_mixture_cost.py  kernel.py  pw_constant.py  pw_harmonic.py  pw_linear.py  searchParameterSweepCost.py  sinus.py
ruptures/datasets/: __init__.py  pw_constant.py  pw_gaussian_mixture.py  pw_harmonic.py  pw_linear.py  pw_normal.py  pw_wavy.py  utils.py
ruptures/detection/: __init__.py  abstraction.py  binseg.py  bottomup.py  clinearcpd.py  dynp.py  greedyar.py  greedylinear.py  kernelcpd.py  kerneldynp.py  omp.py  ompk.py  pelt.py  window.py  window_lr.py  window_mmd.py
ruptures/dynamic_programming/: __init__.py  dynamic_programming.py  memoizedict.py  piecewise_constant.py  piecewise_kernel.py  piecewise_sinus.py
ruptures/metrics/: __init__.py  auc_score.py  hamming.py  hausdorff.py  precisionrecall.py  randindex.py  sanity_check.py  timeerror.py  zerooneloss.py
ruptures/pelt/: Pelt.py  __init__.py  costs.py  pelt.py
ruptures/search_methods/: __init__.py  base.py  binseg.py  dynamic_programming.py  dynp.py  greedyar.py  greedylinear.py  omp.py  ompk.py  pelt.py  sanity_check.py  window.py
ruptures/show/: __init__.py  display.py
ruptures/utils/: __init__.py  bnode.py  convert_np.py  drawbkps.py  lasso.py  memoizedict.py  six.py  utils.py
scripts/: add_notebooks_to_docs_site.sh  notebooks_add_binder_download.py
src/ruptures/: __init__.py  base.py  exceptions.py
tests/: .coverage  test_bnode.py  test_costs.py  test_datasets.py  test_datasets.py.old  test_detection.py  test_display.py  test_display.py.old  test_dynamic_prog.py.old  test_kernel.py  test_l1potts.py  test_metrics.py  test_pelt.py  test_pelt.py.old  test_piecewiseconstant.py  test_piecewisekernel.py  test_piecewisesinus.py
(+141 files in other folders)
