[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=42",  # https://github.com/deepcharles/ruptures/pull/100#discussion_r553700339
    "wheel",
    "Cython>=0.28.5",
    "setuptools_scm[toml]>=3.4",  # https://scikit-hep.org/developer/packaging#git-tags-official-pypa-method

    # PyPy needs numpy >= 1.14.0
    # platform_python_implementation!='CPython' not needed >= Python 3.7 which is numpy 1.14.5
    "numpy==1.13.3; python_version=='3.6' and platform_machine!='aarch64' and platform_system!='AIX' and platform_python_implementation=='CPython'",
    "numpy==1.14.0; python_version=='3.6' and platform_machine!='aarch64' and platform_system!='AIX' and platform_python_implementation!='CPython'",

    # AIX needs numpy >= 1.16.0
    # platform_system!='AIX' not needed >= Python 3.8 which is numpy 1.17.3
    "numpy==1.16.0; python_version=='3.6' and platform_machine!='aarch64' and platform_system=='AIX'",
    "numpy==1.16.0; python_version=='3.7' and platform_machine!='aarch64' and platform_system=='AIX'",

    # ARM needs numpy >= 1.19.0
    # platform_machine!='aarch64' not needed >= Python 3.9 which is numpy 1.19.3
    "numpy==1.19.0; python_version=='3.6' and platform_machine=='aarch64'",
    "numpy==1.19.0; python_version=='3.7' and platform_machine=='aarch64'",
    "numpy==1.19.0; python_version=='3.8' and platform_machine=='aarch64'",

    # default numpy requirements
    "numpy==1.14.5; python_version=='3.7' and platform_machine!='aarch64' and platform_system!='AIX'",
    "numpy==1.17.3; python_version=='3.8' and platform_machine!='aarch64'",
    "numpy==1.19.3; python_version=='3.9'",

    "scipy>=0.19.1",
]
build-backend = "setuptools.build_meta"

# pytest config
# For more information, see:
# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=xml --cov-report=term:skip-covered --cov=ruptures"
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "src/ruptures/version.py"
