[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=42",  # https://github.com/deepcharles/ruptures/pull/100#discussion_r553700339
    "wheel",
    "Cython>=0.28.5",
    "setuptools_scm[toml]>=3.4",  # https://scikit-hep.org/developer/packaging#git-tags-official-pypa-method
    "oldest-supported-numpy",  # https://github.com/scipy/oldest-supported-numpy
    "scipy>=0.19.1",
]
build-backend = "setuptools.build_meta"

# pytest config
# For more information, see:
# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "src/ruptures/version.py"
